# 008-ci-test

./: README.md
.github/workflows/: build-benchmark-database-ci-script.yml  build-ci.yml  create-pull-request.yml  issues.yml  print-env.yml
ci/: Cargo.toml
ci/src/: github.rs  main.rs
scratch/: test-data-15892
